Fix some errors related to plugin and add test case